Fix z-index of landing page dots

--- a/src/assets/css/landing.css
+++ b/src/assets/css/landing.css
@@ -11,7 +11,7 @@
 .dots {
   display: flex;
   flex-direction: column;
-  z-index: 1;
+  z-index: 401;
   justify-items: center;
   align-items: center;
 }
